http://code.google.com/p/bionetgen

== BioNetGen-2.2.6-stable ==

==== New Language Conventions ====
* Whitespace is no longer allowed in rule names.
* All labels and BNG objects (except for bonds and states) must begin with a letter or 
underscore character.
* Labels must now be followed by a colon (':') with no intervening whitespace.
** Example: <big><tt>RuleX: A(s~0) -> A(s~1) k</tt></big>

==== Bug Fixes ====
* An error is now thrown if an unrecognized block name is encountered.
* An error is now thrown if duplicate rule names are detected.

==== Minor Changes ====
* Unnamed rules are now given automatic names beginning with "_R" (e.g., "_R1", "_R2", etc.).
* Reverse rules are now appended with "_r" (rather than "(reverse)").
* validate_examples.pl now ignores trailing comments in file comparisons.

== BioNetGen-2.2.6-testing ==
'''''2015 March 3'''''

==== New Features ====

===== SBML-to-BNGL Translator =====
* The SBML-to-BNGL translator can perform both a flat (one-to-one) translation 
of an SBML model in terms of unstructured species and an "atomized" translation 
that recovers the implicit molecular structure (binding sites and states) of the 
species within the model. The translator can be accessed in the following three ways:
# Using the readFile() BioNetGen action: The 'atomize' argument specifies whether a 
flat or atomized translation is to be performed (default is flat, i.e., 
<big><tt>atomize=>0</tt></big>). The translated model is written to [sbml_filename].bngl, 
which is then read and loaded into memory. This allows additional actions [e.g., simulate(), 
parameter_scan()] to be performed on the model if desired.  See the 
[[BioNetGen_Actions_and_Arguments | BioNetGen Actions & Arguments Guide]] for a comprehensive 
listing of all actions and arguments, including readFile().
# Running the <big><tt>[BNGPATH]/bin/sbmlTranslator</tt></big> executable directly: 