@@ -98,15 +98,20 @@ sub readString
     $string =~ s/^\s*//;
 
     # Check if first token is an index (This index will be ignored)
-    $string =~ s/^\s*\d+\s+//;
+    # DEPRECATED as of BNG 2.2.6
+    if ( $string =~ s/^\s*\d+\s+// )
+    {
+    		return "Leading index detected at '$string'. This is deprecated as of BNG 2.2.6.";
+    }
     
     # Remove leading label, if exists
-    $string =~ s/^\s*(\w+)\s*:\s+//;
+    if ( $string =~ s/^\s*(\w+)\s*:\s+// )
+    {
+	    # Check label for leading number
+		my $label = $1;
+		if ($label =~ /^\d/) {  return "Syntax error (label begins with a number) at '$label'";  }
+    }
     
-    # Check label for leading number
-	my $label = $1;
-	if ($label =~ /^\d/) {  return "Syntax error (label begins with a number) at '$label'";  }
-	
 	# Check name for leading number
 	my $string_left = $string;
 	unless ( $string_left =~ s/^([A-Za-z_]\w*)// )
