@@ -208,15 +208,16 @@ sub readString
     $$sptr =~ s/^\s*//;
     
     # Remove leading numeric index, if any
-    $$sptr =~ s/^\d+\s+//;
+    $$sptr =~ s/^\d+\s+//; # Can't deprecate this because indices used in NET files
     
     # Remove leading label, if any
-	$$sptr =~ s/^(\w+)\s*:\s+//;
-
-	# Check label for leading number
-	my $label = $1;
-	if ($label =~ /^\d/) {  return "Syntax error (label begins with a number) at '$label'";  }
-	
+	if ( $$sptr =~ s/^(\w+)\s*:\s+// )
+	{
+		# Check label for leading number
+		my $label = $1;
+		if ($label =~ /^\d/) {  return "Syntax error (label begins with a number) at '$label'";  }
+	}
+		
 	# Check name for leading number
 	my $sptr_left = $$sptr;
 	unless ( $sptr_left =~ s/^([A-Za-z_]\w*)// )
